# sqlx_bug_repro_1

./: .env  Cargo.toml  docker-compose.yaml
migrations/: 20241122102005_test.down.sql  20241122102005_test.up.sql
src/: main.rs
