[package]
name = "test_sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
argon2 = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
opentelemetry = "0.25"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls-ring",
  "uuid",
] }
thiserror = "1.0"
url = "2.5"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
dotenvy = "0.15"

[build-dependencies]
dotenvy = "*"
